--- a/TA-SecOnion_Hunting/default/data/ui/views/zeek_ioc_dashboard.xml
+++ b/TA-SecOnion_Hunting/default/data/ui/views/zeek_ioc_dashboard.xml
@@ -264,7 +264,7 @@ $MD5Lookup$
       <single>
         <title>Total MD5 Hits</title>
         <search base="ZeekMD5">
-          <query>| fields MD5
+          <query>| fields md5
 $MD5Lookup$
 | stats count</query>
         </search>
