--- a/TA-SecOnion_Hunting/default/data/ui/views/zeek_ioc_dashboard.xml
+++ b/TA-SecOnion_Hunting/default/data/ui/views/zeek_ioc_dashboard.xml
@@ -65,7 +65,7 @@
            }
        </style>
      </html>
-    <input type="time" token="TimeSelection" searchWhenChanged="true">
+    <input type="time" token="TimeSelection" searchWhenChanged="false">
       <label>Time Selection</label>
       <default>
         <earliest>-24h@h</earliest>
